fix spacing for containers

--- a/app/styles.css
+++ b/app/styles.css
@@ -27,7 +27,6 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 100%;
 }
 
 /* project-list-item styles */
